fixed container z-index

--- a/v2/theme/browser/sass/_global.scss
+++ b/v2/theme/browser/sass/_global.scss
@@ -177,6 +177,7 @@ p {
 	top: 0;
 	left: 50%;
 	margin-left: 0 - span(12)/2 !important;
+	z-index: 10;
 }
 .text-right {
 	text-align: right;
